--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
     <a class="header__logo">
         <img src="images/logo-black.svg" alt="логотип сайта" class="header__logo-image">
     </a>
-    <address class="address">
-        <div class="header__address">
-            <a href="tel:+99995555555">+9 999 555 5555</a><br>
-            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-            наб. Принсенграхт 263-<br>
-            265, Амстердам
-        </div>
+    <address class="address header__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a><br>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+        наб. Принсенграхт 263-<br>
+        265, Амстердам
 
     </address>
 
@@ -69,47 +67,41 @@
         <ul class="lots__card-list">
             <li class="lots__card-list-item">
                 <a href="#" class="card-link">
-                    <article class="card_type_film">
+                    <article class="card card_type card_type_film">
                         <div class="overlay"></div>
-                        <div class="card">
-                            <h3 class="card__title">
-                                Фильм режиссёра, который бросил киношколу
-                            </h3>
-                            <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка,
-                                если бы вы не знали, что
-                                режиссёр — Пол Томас Андерсон?</p>
-                        </div>
+                        <h3 class="card__title">
+                            Фильм режиссёра, который бросил киношколу
+                        </h3>
+                        <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка,
+                            если бы вы не знали, что
+                            режиссёр — Пол Томас Андерсон?</p>
                     </article>
                 </a>
             </li>
             <li class="lots__card-list-item">
                 <a href="#" class="card-link">
-                    <article class="card_type_book">
+                    <article class="card card_type card_type_book">
                         <div class="overlay"></div>
-                        <div class="card">
-                            <h3 class="card__title">
-                                Книга, где описан один скучный день из жизни рекламного агента
-                            </h3>
-                            <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-                                переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и
-                                об истории литературы, начиная с античных времён. И это всё накладывается на эпическую
-                                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-                        </div>
+                        <h3 class="card__title">
+                            Книга, где описан один скучный день из жизни рекламного агента
+                        </h3>
+                        <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+                            переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и
+                            об истории литературы, начиная с античных времён. И это всё накладывается на эпическую
+                            поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
                     </article>
                 </a>
             </li>
             <li class="lots__card-list-item">
                 <a href="#" class="card-link">
-                    <article class="card_type_picture">
+                    <article class="card card_type card_type_picture">
                         <div class="overlay"></div>
-                        <div class="card">
-                            <h3 class="card__title">
-                                Картина, которую повторит даже 5-летний сын маминой подруги
-                            </h3>
-                            <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
-                                похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое
-                                поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
-                        </div>
+                        <h3 class="card__title">
+                            Картина, которую повторит даже 5-летний сын маминой подруги
+                        </h3>
+                        <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
+                            похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое
+                            поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
                     </article>
                 </a>
             </li>
@@ -123,7 +115,7 @@
         </div>
         <div class="about__column">
             <h2 class="about__title">Об аукционе</h2>
-            <div class="about__text">
+            <article class="about__text">
                 <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще
                     не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или
                     картина,
@@ -137,7 +129,7 @@
                     лоты стали
                     культовыми.
                 </p>
-            </div>
+            </article>
         </div>
     </section>
 
